<resources>
    <string name="app_name">Kvitka Nails</string>
    <string name="by_anna">by Anna</string>
    <string name="ann_image_description">Anna Nails</string>
    <string name="btn_book_appointment">Book appointment</string>
    <string name="btn_services_prices">Services &amp; Prices</string>
    <string name="btn_design_gallery">Design Gallery</string>
    <string name="btn_my_account">My Account</string>
    <string name="btn_contact_location">Contact / Location</string>
    <string name="service_manicure_title">Manicure</string>
    <string name="manicure_title_classic">"Manicure Classic"</string>
    <string name="service_removal_title">Removal</string>
    <string name="service_removal_and_manicure_title">Removal + Manicure</string>
    <string name="service_shellac_title">Shellac</string>
    <string name="service_base_coat_title">Base Coat</string>
    <string name="service_gel_title">Gel</string>
    <string name="service_gel_with_color_title">Gel + Color</string>
    <string name="service_gel_with_art_title">Gel + Art design</string>
    <string name="service_removal_only">Removal only</string>
    <string name="shellac_title">"Shellac (Color coating)"</string>
    <string name="service_pedicure_title">Pedicure</string>
    <string name="service_coating_title">Coating</string>
    <string name="service_design_title">Design</string>
    <string name="service_extensions_title">Extensions</string>
    <string name="euro_symbol">€</string>
    <string name="back_button">← Back</string>
    <string name="total_text">Total: </string>
    <string name="photo_description">Design photo</string>
    <string name="prev_button">◀</string>
    <string name="next_button">▶</string>
    <string name="enter_name">Please enter your name</string>
    <string name="enter_phone">Please enter your phone number</string>
    <string name="name_hint">Your name</string>
    <string name="phone_hint">+353 XX XXX XXXX</string>
    <string name="register_button">Register</string>
    <string name="address_title">📍 Address:</string>
    <string name="instagram_title">📷 Instagram:</string>
    <string name="phone_title">📞 Phone:</string>
    <string name="open_map_button">Open Map</string>
</resources>