<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_dark"
    tools:context=".DesignsGallery">

    <!-- Heading -->
    <TextView
        android:id="@+id/APPname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/storyscript_regular"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/byAnna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:fontFamily="@font/arizonia_regular"
        android:text="@string/by_anna"
        android:textColor="#E0B0FF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/APPname"
        app:layout_constraintStart_toEndOf="@+id/APPname"
        app:layout_constraintTop_toTopOf="@+id/APPname"
        app:layout_constraintVertical_bias="1.0" />

    <!-- Image -->
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="148dp"
        android:contentDescription="@string/ann_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/APPname"
        app:srcCompat="@drawable/design3" />

    <!-- Back button -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_custom_background"
        android:elevation="10dp"
        android:fontFamily="@font/arizonia_regular"
        android:text="@string/back_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>