<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyAccount">

    <!-- Heading -->
    <TextView
        android:id="@+id/APPname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/storyscript_regular"
        android:text="@string/app_name"
        android:textColor="@color/dark_red"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/byAnna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/arizonia_regular"
        android:text="@string/by_anna"
        android:textColor="#9C27B0"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/APPname"
        app:layout_constraintStart_toEndOf="@+id/APPname"
        app:layout_constraintTop_toTopOf="@+id/APPname" />

    <!-- Image -->
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="148dp"
        android:contentDescription="@string/ann_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/APPname"
        app:srcCompat="@drawable/account4" />

    <!-- Back button -->

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_custom_background"
        android:elevation="10dp"
        android:fontFamily="@font/arizonia_regular"
        android:text="@string/back_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Input fields -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Please enter your name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@android:drawable/editbox_background"
            android:padding="16dp"
            android:hint="@string/name_hint"
            android:textColor="@color/black"
            android:textColorHint="#888888"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Please enter your phone number"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@android:drawable/editbox_background"
            android:hint="+353 XX XXX XXXX"
            android:inputType="phone"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="#888888"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/button_custom_background"
            android:fontFamily="@font/storyscript_regular"
            android:text="Register"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>