<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appointment_bg"
    tools:context=".Appointment">

    <!-- Heading -->
    <TextView
        android:id="@+id/APPname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/storyscript_regular"
        android:text="@string/app_name"
        android:textColor="@color/dark_red"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/byAnna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/arizonia_regular"
        android:text="@string/by_anna"
        android:textColor="#9C27B0"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/APPname"
        app:layout_constraintStart_toEndOf="@+id/APPname"
        app:layout_constraintTop_toTopOf="@+id/APPname" />

    <!-- Image -->
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="148dp"
        android:contentDescription="@string/ann_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/APPname"
        app:srcCompat="@drawable/appointment1" />

    <!-- Back button -->

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_custom_background"
        android:elevation="10dp"
        android:fontFamily="@font/arizonia_regular"
        android:text="@string/back_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Selected date display -->
    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="Selected date"
        android:textColor="#230454"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <!-- Time slots grid -->
    <GridView
        android:id="@+id/timeGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:horizontalSpacing="12dp"
        android:numColumns="2"
        android:verticalSpacing="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectedDate" />

    <!-- Confirm button -->
    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_custom_background"
        android:fontFamily="@font/arizonia_regular"
        android:text="Confirm Appointment"
        android:textColor="#230454"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>