<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5C6E9"
    tools:context=".Location">

    <!-- Heading -->
    <TextView
        android:id="@+id/APPname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/storyscript_regular"
        android:text="@string/app_name"
        android:textColor="@color/dark_red"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/byAnna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/arizonia_regular"
        android:text="@string/by_anna"
        android:textColor="#9C27B0"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/APPname"
        app:layout_constraintStart_toEndOf="@+id/APPname"
        app:layout_constraintTop_toTopOf="@+id/APPname" />

    <!-- Image -->
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="414dp"
        android:layout_height="215dp"
        android:contentDescription="@string/ann_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/APPname"
        app:srcCompat="@drawable/location" />

    <!-- Back button -->

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_custom_background"
        android:elevation="10dp"
        android:fontFamily="@font/arizonia_regular"
        android:text="@string/back_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Contact Information -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55">

        <!-- Address -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="📍 Address:"
            android:textColor="#230454"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Apartment 2, Novara Ave, Bré, Co. Contae Chill Mhantáin, A98 TX98"
            android:textColor="#333333"
            android:textSize="16sp" />

        <!-- Instagram -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="📷 Instagram:"
            android:textColor="#230454"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvInstagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="\@kvitka_nails_studio"
            android:textColor="#E1306C"
            android:textSize="16sp" />

        <!-- Phone -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="📞 Phone:"
            android:textColor="#230454"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:autoLink="phone"
            android:text="085 192 63 81"
            android:textColor="#333333"
            android:textSize="16sp" />

        <!-- Open Map Button -->
        <Button
            android:id="@+id/btnOpenMap"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/button_custom_background"
            android:fontFamily="@font/arizonia_regular"
            android:text="Open Map"
            android:textColor="#230454"
            android:textSize="22sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>