<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appointment_bg"
    tools:context=".Appointment">

    <!-- Heading -->
    <TextView
        android:id="@+id/APPname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/storyscript_regular"
        android:text="@string/app_name"
        android:textColor="@color/dark_red"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/byAnna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/arizonia_regular"
        android:text="@string/by_anna"
        android:textColor="#9C27B0"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/APPname"
        app:layout_constraintStart_toEndOf="@+id/APPname"
        app:layout_constraintTop_toTopOf="@+id/APPname" />

    <!-- Image -->
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="148dp"
        android:contentDescription="@string/ann_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/APPname"
        app:srcCompat="@drawable/appointment1" />

    <!-- Back button -->

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_custom_background"
        android:elevation="10dp"
        android:fontFamily="@font/arizonia_regular"
        android:text="@string/back_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Month navigation -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <!-- Calendar grid -->
    <GridView
        android:id="@+id/calendarGrid"
        android:layout_width="324dp"
        android:layout_height="281dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:horizontalSpacing="4dp"
        android:numColumns="7"
        android:verticalSpacing="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMonthYear" />

    <!-- Next button -->
    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_custom_background"
        android:fontFamily="@font/arizonia_regular"
        android:text="Next"
        android:textColor="#230454"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvMonthYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="270dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="April 2026"
        android:textColor="#230454"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPrevMonth"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_custom_background"
        android:text="◀"
        android:textColor="#230454"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/tvMonthYear"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNextMonth"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="275dp"
        android:background="@drawable/button_custom_background"
        android:text="▶"
        android:textColor="#230454"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvMonthYear"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>